# restful_library_new

./: Architecture.drawio  Dockerfile  ER_book_managment_system.drawio  README.md  docker-compose.yaml  pyproject.toml  ТЗ.md
app/: main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  book.py  books.py  borrowings.py  publishers.py  readers.py  reports.py
app/core/: config.py  database.py
app/models/: __init__.py  book.py  borrowing.py  publisher.py  reader.py
app/repositories/: __init__.py  base_repository.py  book_repository.py  borrowing_repository.py  publisher_repository.py  reader_repository.py
app/schemas/: __init__.py  book.py  borrowing.py  publisher.py  reader.py
app/services/: __init__.py  base_service.py  book_service.py  borrowing_service.py  publisher_service.py  reader_service.py  report_service.py
tests/: test_api.py  test_repositories.py
tests/unit/: test_borrowing_service.py
utils/: generate_fixtures.py  init_db.sql
